src/test/deca/syntax/invalid/sansObjet/badBoolDeclaration.deca
{
    boolean x = false;
    boolean y = true;
    bolean z = x!!y;
}